testsuite/tests/backpack/should_fail/bkpfail34.bkp
unit p where
    signature A where
        data T
        x :: T
unit q where
    dependency signature p[A=<A>]
    signature A (x) where
